[gd_scene load_steps=7 format=3 uid="uid://ra1pfx3jkrqr"]

[ext_resource type="Script" uid="uid://p24c27jyrkxb" path="res://systems/character_controllers/3D/first_person/first_person_controller.gd" id="1_mm8sv"]
[ext_resource type="Texture2D" uid="uid://brti1ssyc3nyj" path="res://systems/character_controllers/3D/first_person/crosshair.png" id="2_eaokx"]
[ext_resource type="Script" uid="uid://txrhs4w23car" path="res://systems/character_controllers/3D/first_person/interaction_ray.gd" id="3_b40jw"]

[sub_resource type="GDScript" id="GDScript_b40jw"]
resource_name = "interaction_indication"
script/source = "extends Sprite2D

func _on_interaction(_source:Node,_target:Node):
	frame = 1

func _on_object_found(_object:Object):
	frame = 2

func _on_object_lost(_object:Object):
	frame = 0
"

[sub_resource type="CapsuleMesh" id="CapsuleMesh_mm8sv"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_eaokx"]
points = PackedVector3Array(-0.12520654, -0.532801, -0.4805069, 0.022783129, 0.4760704, 0.49888408, 0.16971254, 0.5591441, 0.46417162, 0.23105091, -0.8035912, 0.32045516, 0.40741014, 0.651043, -0.24352328, -0.4827893, 0.59484255, 0.082213186, -0.3628679, -0.68231165, 0.2896967, 0.46904355, -0.65452886, -0.06627126, -0.12744367, 0.8427015, -0.33810276, -0.39343542, -0.6839421, -0.24471663, 0.43825462, 0.62330925, 0.20084947, 0.0841477, 0.977454, 0.11479468, -0.06820232, -0.9764576, -0.12927033, 0.20054972, -0.56312895, -0.4514544, -0.18552664, 0.59545326, -0.4534751, -0.27336287, 0.59226835, 0.40775412, -0.0069364863, -0.47682306, 0.49966025, 0.37582088, -0.5886136, 0.31695515, 0.111579016, 0.5630594, -0.48117727, -0.41725034, 0.5278656, -0.27049688, -0.48454633, -0.59697217, -0.06650971, -0.27974695, 0.90856135, 0.05333608, -0.25019687, -0.8807117, 0.20531891, 0.263647, -0.90277094, -0.1273943, 0.29336792, 0.8715263, -0.15719566, 0.3734115, -0.5263189, -0.32824618, 0.4996626, 0.47664148, -0.0068885577, 0.053105574, 0.8750009, 0.32470253, -0.15454252, -0.5908538, 0.4658794, -0.09727988, -0.7823577, -0.39818847, -0.3876489, -0.49817133, 0.31564978, -0.30067965, -0.58799505, -0.38890144)

[node name="FirstPersonController" type="CharacterBody3D"]
script = ExtResource("1_mm8sv")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Container" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="Crosshair" type="Sprite2D" parent="HUD/Container"]
texture = ExtResource("2_eaokx")
hframes = 3
script = SubResource("GDScript_b40jw")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_mm8sv")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
visible = false
shape = SubResource("ConvexPolygonShape3D_eaokx")

[node name="Head" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.66, -0.345)

[node name="Camera3D" type="Camera3D" parent="Head"]

[node name="RayCast3D" type="RayCast3D" parent="Head/Camera3D" groups=["interaction_box"]]
transform = Transform3D(0.5, 0, 0, 0, -1.3113416e-07, -0.5, 0, 3, -2.1855694e-08, 0, 0, 0)
collide_with_areas = true
debug_shape_custom_color = Color(0, 1, 0.116666794, 1)
script = ExtResource("3_b40jw")

[connection signal="found_interactable" from="Head/Camera3D/RayCast3D" to="HUD/Container/Crosshair" method="_on_object_found"]
[connection signal="interact" from="Head/Camera3D/RayCast3D" to="HUD/Container/Crosshair" method="_on_interaction"]
[connection signal="lost_interactable" from="Head/Camera3D/RayCast3D" to="HUD/Container/Crosshair" method="_on_object_lost"]
